deploy/manager/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: gateway            # 修改为项目的组
  name: gateway_be         # 修改为    项目的名字
spec:
  rules:
    - host: www.donscoco.online        # 域名
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway  # 执行自己定义的svc
              servicePort: 80
